--- a/SwiftCGI Demo/SwiftCGI Demo/Base.lproj/Main.storyboard
+++ b/SwiftCGI Demo/SwiftCGI Demo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C94b" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6254"/>
     </dependencies>
@@ -673,10 +673,10 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g0n-MW-8fL">
-                                <rect key="frame" x="74" y="78" width="333" height="115"/>
+                                <rect key="frame" x="74" y="66" width="333" height="138"/>
                                 <textFieldCell key="cell" sendsActionOnEndEditing="YES" id="Ov3-J9-dYO">
                                     <font key="font" size="19" name="HelveticaNeue-Light"/>
-                                    <string key="title">So yeah... Apple was dumb. We kindof need to write this as a Cocoa app for now instead of a command-line one because Frameworks + Command Line App = boom!</string>
+                                    <string key="title">So yeah... Apple was dumb. We kindof need to write this as a Cocoa app for now instead of a command-line one because Frameworks + Command Line App = boom! Also, you can pretty much ignore this storyboard...</string>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
